trybuild/tests/ui/compile-fail-2.stderr
error: ERROR
 --> $DIR/compile-fail-2.rs:1:1
  |
1 | compile_error!("ERROR");
  | ^^^^^^^^^^^^^^^^^^^^^^^^
